networking/template.yaml
AWSTemplateFormatVersion: '2010-09-09'

Parameters:
  VpcCidrBlock:
    Type: String
    Default: 10.38.0.0/16
  PvtSubnetCidrBlocks:
    Type: CommaDelimitedList
    Default: 10.38.0.0/24, 10.38.1.0/24
  PubSubnetCidrBlocks:
    Type: CommaDelimitedList
    Default: 10.38.128.0/24, 10.38.129.0/24

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock
      EnableDnsSupport: true
      EnableDnsHostnames: true
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt Eip.AllocationId
      SubnetId: !Ref PubSubnet1
  Eip:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway
  PvtSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Select
      - 0
      - !Ref PvtSubnetCidrBlocks
      AvailabilityZone: !Select
      - 0
      - Fn::GetAZs: !Ref AWS::Region
  PvtSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Select
      - 1
      - !Ref PvtSubnetCidrBlocks
      AvailabilityZone: !Select
      - 1
      - Fn::GetAZs: !Ref AWS::Region
  PvtRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
  PvtRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PvtRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway
  PvtSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PvtRouteTable
      SubnetId: !Ref PvtSubnet1
  PvtSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PvtRouteTable
      SubnetId: !Ref PvtSubnet2
  PubSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Select [0, !Ref PubSubnetCidrBlocks]
      AvailabilityZone: !Select
      - 0
      - Fn::GetAZs: !Ref AWS::Region
  PubSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Select [1, !Ref PubSubnetCidrBlocks]
      AvailabilityZone: !Select
      - 1
      - Fn::GetAZs: !Ref AWS::Region
  PubRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
  PubRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PubRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PubSubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRouteTable
      SubnetId: !Ref PubSubnet1
  PubSubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PubRouteTable
      SubnetId: !Ref PubSubnet2
